Bug 32713 - [SNB] case glean/fbo fail
Summary: [SNB] case glean/fbo fail
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: high major
Assignee: haihao
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-28 18:32 UTC by Yi Sun
Modified: 2011-01-06 22:25 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Yi Sun 2010-12-28 18:32:29 UTC
System Environment:
--------------------------
Platform:    Hunronriver
Kernel_version:  (drm-intel-fixes)4d3024428f5c3ef5295e6f6fb257ae118b3f93a1
Libdrm:         (master)2.4.23-4-gbad5242a59aa8e31cf10749e2ac69b3c66ef7da0
Mesa:           (7.10)1ca240ec2d81ccf3e6a55b736b6aa11959d87b6a
Xserver:        (server-1.9-branch)xorg-server-1.9.3-10-g295a893aa3b594f9e0fb154bff14e12514b4dad5
Xf86_video_intel:  (master)2.13.902-11-g7667ad8432c032aec3a2aa004fc4dfc1877971b3

Bug detailed description:
-------------------------
The case passes on Ironlake. The output information is as following:

libGL: OpenDriver: trying /opt/X11R7/lib/dri/i965_dri.so
GL_EXT_framebuffer_object is supported
GL_ARB_framebuffer_object is supported
  depth = 0, stencil = 1
  (0, 0) = [0.000000, 0.000000, 0.000000], is expected to be[1.000000, 0.000000, 0.000000]
FAILURE: Render to single texture failed (at tfbo.cpp:849)
  mode = 0
fbo:  FAIL rgba8, db, z24, s8, win+pmap, id 33
        7 tests passed, 1 tests failed.
GL_EXT_framebuffer_object is supported
GL_ARB_framebuffer_object is supported
  depth = 0, stencil = 1
  (0, 0) = [0.501961, 0.000000, 0.000000], is expected to be[1.000000, 0.000000, 0.000000]
FAILURE: Render to single texture failed (at tfbo.cpp:849)
  mode = 0
fbo:  FAIL rgba8, db, z24, s8, win+pmap, id 34
        7 tests passed, 1 tests failed.
GL_EXT_framebuffer_object is supported
GL_ARB_framebuffer_object is supported
  depth = 0, stencil = 1
  (0, 0) = [0.501961, 0.000000, 0.000000], is expected to be[1.000000, 0.000000, 0.000000]
FAILURE: Render to single texture failed (at tfbo.cpp:849)
  mode = 0
fbo:  FAIL rgba8, db, z24, s8, win+pmap, id 103
        7 tests passed, 1 tests failed.
GL_EXT_framebuffer_object is supported
GL_ARB_framebuffer_object is supported
  depth = 0, stencil = 1
  (0, 0) = [0.501961, 0.000000, 0.000000], is expected to be[1.000000, 0.000000, 0.000000]
FAILURE: Render to single texture failed (at tfbo.cpp:849)
  mode = 0
fbo:  FAIL rgb8, z24, s8, win+pmap, id 155
        7 tests passed, 1 tests failed.
GL_EXT_framebuffer_object is supported
GL_ARB_framebuffer_object is supported
  depth = 0, stencil = 1
  (0, 0) = [0.501961, 0.000000, 0.000000], is expected to be[1.000000, 0.000000, 0.000000]
FAILURE: Render to single texture failed (at tfbo.cpp:849)
  mode = 0
fbo:  FAIL rgb8, db, z24, s8, win+pmap, id 156
        7 tests passed, 1 tests failed.
GL_EXT_framebuffer_object is supported
GL_ARB_framebuffer_object is supported
  depth = 0, stencil = 1
  (0, 0) = [0.501961, 0.000000, 0.000000], is expected to be[1.000000, 0.000000, 0.000000]
FAILURE: Render to single texture failed (at tfbo.cpp:849)
  mode = 0
fbo:  FAIL rgb8, db, z24, s8, win+pmap, id 157
        7 tests passed, 1 tests failed.
GL_EXT_framebuffer_object is supported
GL_ARB_framebuffer_object is supported
  depth = 0, stencil = 1
  (0, 0) = [0.501961, 0.000000, 0.000000], is expected to be[1.000000, 0.000000, 0.000000]
FAILURE: Render to single texture failed (at tfbo.cpp:849)
  mode = 0
fbo:  FAIL rgba8, z24, s8, win+pmap, id 161
        7 tests passed, 1 tests failed.
GL_EXT_framebuffer_object is supported
GL_ARB_framebuffer_object is supported
  depth = 0, stencil = 1
  (0, 0) = [0.501961, 0.000000, 0.000000], is expected to be[1.000000, 0.000000, 0.000000]
FAILURE: Render to single texture failed (at tfbo.cpp:849)
  mode = 0
fbo:  FAIL rgb8, db, z24, s8, win+pmap, id 162
        7 tests passed, 1 tests failed.
GL_EXT_framebuffer_object is supported
GL_ARB_framebuffer_object is supported
  depth = 0, stencil = 1
  (0, 0) = [0.501961, 0.000000, 0.000000], is expected to be[1.000000, 0.000000, 0.000000]
FAILURE: Render to single texture failed (at tfbo.cpp:849)
  mode = 0
fbo:  FAIL rgb8, db, z24, s8, accrgb16, win+pmap, slow, id 163
        7 tests passed, 1 tests failed.
GL_EXT_framebuffer_object is supported
GL_ARB_framebuffer_object is supported
  depth = 0, stencil = 1
  (0, 0) = [0.501961, 0.000000, 0.000000], is expected to be[1.000000, 0.000000, 0.000000]
FAILURE: Render to single texture failed (at tfbo.cpp:849)
  mode = 0
fbo:  FAIL rgba8, db, z24, s8, win+pmap, id 164
        7 tests passed, 1 tests failed.
GL_EXT_framebuffer_object is supported
GL_ARB_framebuffer_object is supported
  depth = 0, stencil = 1
  (0, 0) = [0.501961, 0.000000, 0.000000], is expected to be[1.000000, 0.000000, 0.000000]
FAILURE: Render to single texture failed (at tfbo.cpp:849)
  mode = 0
fbo:  FAIL rgba8, db, z24, s8, accrgba16, win+pmap, slow, id 165
        7 tests passed, 1 tests failed.
GL_EXT_framebuffer_object is supported
GL_ARB_framebuffer_object is supported
  depth = 0, stencil = 1
  (0, 0) = [0.501961, 0.000000, 0.000000], is expected to be[1.000000, 0.000000, 0.000000]
FAILURE: Render to single texture failed (at tfbo.cpp:849)
  mode = 0
fbo:  FAIL rgb8, z24, s8, win+pmap, id 169
        7 tests passed, 1 tests failed.
GL_EXT_framebuffer_object is supported
GL_ARB_framebuffer_object is supported
  depth = 0, stencil = 1
  (0, 0) = [0.501961, 0.000000, 0.000000], is expected to be[1.000000, 0.000000, 0.000000]
FAILURE: Render to single texture failed (at tfbo.cpp:849)
  mode = 0
fbo:  FAIL rgb8, db, z24, s8, win+pmap, id 170
        7 tests passed, 1 tests failed.
GL_EXT_framebuffer_object is supported
GL_ARB_framebuffer_object is supported
  depth = 0, stencil = 1
  (0, 0) = [0.501961, 0.000000, 0.000000], is expected to be[1.000000, 0.000000, 0.000000]
FAILURE: Render to single texture failed (at tfbo.cpp:849)
  mode = 0
fbo:  FAIL rgb8, db, z24, s8, win+pmap, id 171
        7 tests passed, 1 tests failed.
GL_EXT_framebuffer_object is supported
GL_ARB_framebuffer_object is supported
  depth = 0, stencil = 1
  (0, 0) = [0.501961, 0.000000, 0.000000], is expected to be[1.000000, 0.000000, 0.000000]
FAILURE: Render to single texture failed (at tfbo.cpp:849)
  mode = 0
fbo:  FAIL rgba8, z24, s8, win+pmap, id 175
        7 tests passed, 1 tests failed.
GL_EXT_framebuffer_object is supported
GL_ARB_framebuffer_object is supported
  depth = 0, stencil = 1
  (0, 0) = [0.501961, 0.000000, 0.000000], is expected to be[1.000000, 0.000000, 0.000000]
FAILURE: Render to single texture failed (at tfbo.cpp:849)
  mode = 0
fbo:  FAIL rgba8, db, z24, s8, win+pmap, id 176
        7 tests passed, 1 tests failed.
GL_EXT_framebuffer_object is supported
GL_ARB_framebuffer_object is supported
  depth = 0, stencil = 1
  (0, 0) = [0.501961, 0.000000, 0.000000], is expected to be[1.000000, 0.000000, 0.000000]
FAILURE: Render to single texture failed (at tfbo.cpp:849)
  mode = 0
fbo:  FAIL rgb8, db, z24, s8, win+pmap, id 177
        7 tests passed, 1 tests failed.
GL_EXT_framebuffer_object is supported
GL_ARB_framebuffer_object is supported
  depth = 0, stencil = 1
  (0, 0) = [0.501961, 0.000000, 0.000000], is expected to be[1.000000, 0.000000, 0.000000]
FAILURE: Render to single texture failed (at tfbo.cpp:849)
  mode = 0
fbo:  FAIL rgb8, db, z24, s8, accrgb16, win+pmap, slow, id 178
        7 tests passed, 1 tests failed.
GL_EXT_framebuffer_object is supported
GL_ARB_framebuffer_object is supported
  depth = 0, stencil = 1
  (0, 0) = [0.501961, 0.000000, 0.000000], is expected to be[1.000000, 0.000000, 0.000000]
FAILURE: Render to single texture failed (at tfbo.cpp:849)
  mode = 0
fbo:  FAIL rgba8, db, z24, s8, win+pmap, id 179
        7 tests passed, 1 tests failed.
GL_EXT_framebuffer_object is supported
GL_ARB_framebuffer_object is supported
  depth = 0, stencil = 1
  (0, 0) = [0.501961, 0.000000, 0.000000], is expected to be[1.000000, 0.000000, 0.000000]
FAILURE: Render to single texture failed (at tfbo.cpp:849)
  mode = 0
fbo:  FAIL rgba8, db, z24, s8, accrgba16, win+pmap, slow, id 180
        7 tests passed, 1 tests failed.
Comment 1 haihao 2011-01-04 22:16:04 UTC
commit 4e8f123f14e4a5bbd47c8cf7ec0c02d4ee6efd2d
Author: Xiang, Haihao <haihao.xiang@intel.com>
Date:   Wed Jan 5 13:32:40 2011 +0800

    i965: use BLT to clear buffer if possible on Sandybridge
    
    This fixes https://bugs.freedesktop.org/show_bug.cgi?id=32713
    (cherry picked from commit 266d8eed6927650a55974a293959fe21073030bb)
Comment 2 Yi Sun 2011-01-06 22:25:50 UTC
Verified it.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.