i965: use BLT to clear buffer if possible on Sandybridge

This fixes https://bugs.freedesktop.org/show_bug.cgi?id=32713